# ussr

./: README.md  TODO.md  pyproject.toml
tests/: test_USSR.py
ussr/: __init__.py  __lib__.py  __main__.py  constructors.py  handlers.py  helpers.py  manager.py  resource.py  transform.py
